# DocuFlow

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md  guide.md  pyproject.toml
docs/: 01-technical-index.md  02-extraction-pipeline-api.md  03-workflow-configs-and-manual-pipelines.md  04-schemas-templates-and-discovery.md  05-parsers-ocr-rendering-and-search.md  06-results-and-data-models.md  07-validation-review-privacy-and-storage.md  08-batch-comparison-routing-quality-and-eval.md  09-serving-cli-mcp-and-deployment.md  10-extension-points-tracing-and-errors.md  11-pdf-form-filling.md  12-document-splitting.md  13-document-metadata.md  batch-comparison-routing-quality-and-eval.md  extension-points-tracing-and-errors.md  extraction-pipeline-api.md  guide.md  parsers-ocr-rendering-and-search.md  results-and-data-models.md  serving-cli-mcp-and-deployment.md  technical-index.md  validation-review-privacy-and-storage.md
examples/: 01_quickstart.ipynb  02_parsing.ipynb  03_privacy_anonymization.ipynb  04_extraction.ipynb  05_validation_review.ipynb  06_quality_monitoring.ipynb  07_workflow_config.ipynb  08_batch_comparison.ipynb  09_advanced.ipynb  10_results_interpretation.ipynb  11_pdf_form_filling.ipynb  12_document_splitting.ipynb  invoice_extraction.py
examples/data/: generate_invoices.py
examples/schemas/: invoice.py
scripts/: generate_guide.py  test_table_parse.py
src/docflow/: __init__.py  api.py  batch.py  comparison.py  constants.py  discover.py  dockerize.py  errors.py  eval.py  mcp_server.py  processor.py  quality.py  screenshots.py  search.py  serve.py  workflow_config.py
src/docflow/cli/: main.py  utils.py
src/docflow/documents/: __init__.py  evidence.py  locate.py  models.py  tables.py
src/docflow/extraction/: __init__.py  engine.py  escalation.py  evidence.py  models.py  scoring.py  verify.py
src/docflow/ingestion/: __init__.py  local.py  mime.py
src/docflow/observability/: __init__.py
src/docflow/ocr/: __init__.py  base.py  preprocessing.py  tesseract.py
src/docflow/parsing/: __init__.py  azure_di.py  base.py  docling_parser.py  google_docai.py  pdfplumber_parser.py  pymupdf.py  smart_parser.py  tesseract_parser.py  textract.py
src/docflow/privacy/: __init__.py  anonymizer.py  image_redaction.py  mapping_store.py  models.py  policy.py  presidio_provider.py  provider.py  scrubber.py
src/docflow/rendering/: __init__.py  renderer.py
src/docflow/review/: __init__.py  llm_reviewer.py  rules.py
src/docflow/storage/: __init__.py  base.py  local.py
src/docflow/strategies/: __init__.py  base.py
src/docflow/templates/: __init__.py  loader.py  registry.py
src/docflow/validation/: __init__.py  engine.py  validators.py
src/docflow/workflow/: __init__.py  pipeline.py  state.py  steps.py
src/docuflow/: __init__.py  _sync.py  api.py  batch.py  comparison.py  discover.py  dockerize.py  errors.py  eval.py  mcp_server.py  processor.py  quality.py  router.py  screenshots.py  search.py  serve.py  workflow_config.py
src/docuflow/cli/: main.py  utils.py
src/docuflow/documents/: __init__.py  evidence.py  locate.py  models.py  tables.py
src/docuflow/extraction/: __init__.py  engine.py  escalation.py  evidence.py  models.py  prompts.py  scoring.py  sharding.py  verify.py
src/docuflow/filling/: __init__.py  api.py  detector.py  docx_inspector.py  docx_planner.py  docx_writer.py  inspector.py  llm_detector.py  models.py  planner.py  preview.py  review.py  writer.py
src/docuflow/ingestion/: __init__.py  local.py  mime.py
src/docuflow/metadata/: __init__.py  api.py  docx_extractor.py  models.py  pdf_extractor.py
src/docuflow/observability/: __init__.py  traces.py
src/docuflow/ocr/: __init__.py  base.py  tesseract.py
src/docuflow/parsing/: __init__.py  azure_di.py  base.py  docling_parser.py  (+6 more)
tests/: conftest.py  test_api.py  test_auto_extraction.py  test_batch.py  test_bugfixes.py  test_cli.py  test_cloud_parsers.py  test_comparison.py  test_corrections.py  test_discover.py  test_dockerize.py  test_docling_parser.py  test_docx_filling.py  test_errors.py  test_eval.py  test_evidence.py  test_extraction_engine.py  test_filling.py  test_hybrid_extract.py  test_ingestion.py  test_llm_adapter.py  test_llm_reviewer.py  test_locate.py  test_markitdown_parser.py  test_metadata.py  test_models.py  test_multi_extract.py  test_ocr.py  test_parsing.py  test_pipeline.py  test_privacy_anonymizer.py  test_privacy_composite.py  test_privacy_dictionary.py  test_privacy_image_redaction.py  test_privacy_mapping.py  test_privacy_models.py  test_privacy_pipeline.py  test_privacy_presidio.py  test_privacy_scrubber.py  test_provenance.py  (+23 more)
(+43 files in other folders)
