[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docuflow"
version = "0.1.0"
description = "Production workflow runtime for document agents: ingest, parse, extract, validate, cite evidence, store, review, and export business documents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "docuflow contributors"},
]
keywords = ["document", "ai", "ocr", "extraction", "pipeline", "pydantic", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0",
    "structlog>=24.0",
    "click>=8.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.11", "pypdfium2>=4.30"]
forms = ["pypdf>=5.0", "reportlab>=4.0", "pdfplumber>=0.11"]
ocr = ["pytesseract>=0.3.10", "Pillow>=10.0"]
llm = ["litellm>=1.40"]
privacy = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
docling = ["docling>=2.90"]
azure = ["azure-ai-documentintelligence>=1.0"]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-documentai>=2.30"]
mcp = ["mcp[cli]>=1.20"]
serve = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
jupyter = ["nest_asyncio>=1.6"]
all = ["docuflow[pdf,forms,ocr,llm,privacy,docling,azure,aws,gcp,mcp,serve,jupyter]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "reportlab>=4.0",
]

[project.scripts]
docuflow = "docuflow.cli.main:main"
docuflow-mcp = "docuflow.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docuflow = ["py.typed", "templates/builtin/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "N", "I", "SIM", "RUF", "C90", "S"]
ignore = ["E501", "S101", "S105", "S106", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["docuflow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require external dependencies (deselect with '-m \"not integration\"')",
]
